Cleaned code & stated split hands